[gd_scene load_steps=2 format=3 uid="uid://c1ij4lra167t7"]

[ext_resource type="Script" path="res://core/base_ui/sp_window/sp_window.gd" id="1"]

[node name="Window" type="Node2D" groups=["input_objects", "superscreen_objects", "windows"]]
script = ExtResource("1")

[node name="WindowRect" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 200.0
mouse_filter = 2

[node name="ContentPanel" type="PanelContainer" parent="WindowRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ContentContainer" type="HBoxContainer" parent="WindowRect/ContentPanel"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
